# kanidm-admin

./: .eslintignore  .gitignore  .justfile  Cargo.toml  ROADMAP.md  index.html  lit-localize.json  opencode.json  package.json  tsconfig.json  vite.config.ts
.clinerules/: localization.md  markdown-formatting.md  project-structure.md  (+3 more)
app/: Cargo.toml
app/src/: main.rs
app/traildepot/: .gitignore  config.textproto
app/ui/: .eslintrc.json  .gitignore  .prettierignore  index.html  package.json  tsconfig.json  vite.config.ts
app/ui/public/: manifest.webmanifest
app/ui/src/: index.css
app/ui/src/features/auth/: index.ts
app/ui/src/features/auth/components/: auth-status.ts  oauth-callback.ts
app/ui/src/features/auth/types/: auth.types.ts
app/ui/src/features/localization/: index.ts
app/ui/src/features/localization/components/: locale-switcher.ts
app/ui/src/features/localization/controllers/: locale.controller.ts
app/ui/src/features/localization/services/: localization.service.ts
app/ui/src/features/notifications/: index.ts
app/ui/src/features/notifications/components/: notification-modal.ts  toast-container.ts
app/ui/src/features/notifications/services/: notification.service.ts
app/ui/src/features/theme/: index.ts
app/ui/src/features/theme/components/: theme-toggler.ts
app/ui/src/features/theme/services/: theme.service.ts
app/ui/src/features/theme/styles/: theme-variables.css
app/ui/src/features/theme/utils/: prevent-fart.ts
app/ui/src/pages/: welcome-page.ts
app/ui/src/shared/components/: footer-info.ts
app/ui/xliff/: ru.xlf
(+38 files in other folders)
